--- a/common/Makefile
+++ b/common/Makefile
@@ -215,6 +215,7 @@ obj-$(CONFIG_USB_KEYBOARD) += usb_kbd.o
 obj-$(CONFIG_CMD_DFU) += cmd_dfu.o
 obj-$(CONFIG_CMD_GPT) += cmd_gpt.o
 obj-$(CONFIG_CMD_ETHSW) += cmd_ethsw.o
+obj-$(CONFIG_CMD_SBB) += cmd_sbb.o
 
 # Power
 obj-$(CONFIG_CMD_PMIC) += cmd_pmic.o
