board/axxia: Copied X9/XLF Sysmem Init from the RTE
X9/XLF Memory Initialization for hardware has been implemented.
This commit copies the necessary files and removes the older
X7 system memory initialization code.

Signed-off-by: John Jacques <john.jacques@intel.com>

--- a/board/axxia/axc6700/Makefile
+++ b/board/axxia/axc6700/Makefile
@@ -40,6 +40,10 @@ else
 
 obj-y   += mbist_range.o secure.o
 
+ifdef CONFIG_AXXIA_EMU
+obj-y	+= sysmem_emulation.o
+endif
+
 endif
 
 ################################################################################
