--- a/board/axxia/common/Makefile
+++ b/board/axxia/common/Makefile
@@ -33,6 +33,11 @@ else
 
 obj-y += sysmem_reset.o spl.o axxia_initialize.o
 
+ifndef CONFIG_AXXIA_EMU
+obj-y += ncp_sm_denali_2041_init_56xx.o ncp_sysmem_init_synopphy.o
+obj-y += sysmem_asic.o
+endif
+
 endif
 
 ################################################################################
