board/axxia/common: Added support for X9 PCIe/SRIO/SATA SerDes config
Signed-off-by: SangeethaRao <sangeetha.rao@intel.com>

--- a/board/axxia/common/Makefile
+++ b/board/axxia/common/Makefile
@@ -31,7 +31,7 @@ else
 ################################################################################
 ## SPL Build
 
-obj-y += sysmem_reset.o spl.o axxia_initialize.o
+obj-y += sysmem_reset.o spl.o axxia_initialize.o pciesriosata.o
 
 ifndef CONFIG_AXXIA_EMU
 obj-y += ncp_sm_denali_2041_init_56xx.o ncp_sysmem_init_synopphy.o
