board/lsi: Re-Write the Outer Cache Functions in Assembler
This is needed to avoid corrupting the stack.  For example.

flush_dcache_all() calls v7_outer_cache_flush_all() after
flushing the L1/L2 caches.

v7_outer_cache_flush_all() pushes to the stack, with the
changes ending up in L1/L2 and then flushes L3 to memory.

Memory now contains a corrupted version of the stack.  If
caches are then disabled, the next read will read the corrupted
stack from memory.

Signed-off-by: John Jacques <john.jacques@intel.com>

--- a/board/lsi/axxia-arm/Makefile
+++ b/board/lsi/axxia-arm/Makefile
@@ -63,7 +63,7 @@ endif
 ################################################################################
 ## All Builds
 
-COBJS   += failure.o axxia_clocks.o cache.o spi.o debug.o sbb.o vat.o
+COBJS   += failure.o axxia_clocks.o outer_cache.o spi.o debug.o sbb.o vat.o
 SOBJS   += lowlevel.o monitor.o
 
 ifdef CONFIG_HW_WATCHDOG
