--- a/board/axxia/axm5600/Makefile
+++ b/board/axxia/axm5600/Makefile
@@ -26,7 +26,7 @@ ifndef CONFIG_SPL_BUILD
 ################################################################################
 ## Normal Build
 
-obj-y += mdio.o phy.o non_secure.o timer_init.o
+obj-y += mdio.o phy.o timer_init.o
 
 ifdef CONFIG_AXXIA_EIOA
 obj-y += eioa.o ncp_task_config_axm55xx.o ncp_task_axm55xx.o
@@ -49,7 +49,7 @@ endif
 ################################################################################
 ## All Builds
 
-obj-y   += failure.o version.o spi.o vat.o lowlevel.o
+obj-y   += failure.o version.o spi.o lowlevel.o
 
 ifdef CONFIG_HW_WATCHDOG
 obj-y += watchdog.o
