board/axxia: Add Support for AVS on Axxia 5600 and Lionfish
At present, the voltage returned will be V_SAFE.  Once the
recipe to determine the correct voltage is available, it
will be added.

Signed-off-by: John Jacques <john.jacques@intel.com>

--- a/board/axxia/common/Makefile
+++ b/board/axxia/common/Makefile
@@ -36,7 +36,7 @@ obj-y += sysmem_reset.o spl.o axxia_initialize.o pciesriosata.o
 ifndef CONFIG_AXXIA_EMU
 obj-y += ncp_sm_denali_2041_init_56xx.o ncp_sysmem_init_synopphy.o
 obj-y += ncp_cm_ctrl_init_56xx.o ncp_treemem_init_synopphy.o
-obj-y += sysmem_asic.o
+obj-y += sysmem_asic.o voltage.o
 endif
 
 endif
