board/axxia: Add the Option to Run in Cache
Signed-off-by: John Jacques <john.jacques@intel.com>

--- a/board/axxia/common/Makefile
+++ b/board/axxia/common/Makefile
@@ -49,7 +49,7 @@ endif
 ## All Builds
 
 obj-y += lsi.o ncr.o sysmem_size.o parameters.o sbb.o axxia_clocks.o
-obj-y += cache.o outer_cache.o
+obj-y += cache.o outer_cache.o gpdma.o
 
 ifdef CONFIG_HW_WATCHDOG
 obj-y += watchdog.o
