board/axxia: Add Support for the Hardware Watchdog
Signed-off-by: John Jacques <john.jacques@intel.com>

--- a/board/axxia/common/Makefile
+++ b/board/axxia/common/Makefile
@@ -46,3 +46,7 @@ endif
 
 obj-y += lsi.o ncr.o sysmem_size.o parameters.o sbb.o axxia_clocks.o
 obj-y += cache.o outer_cache.o
+
+ifdef CONFIG_HW_WATCHDOG
+obj-y += watchdog.o
+endif
