board/axxia: Optionally Lock Some L3 Cache Lines
Signed-off-by: John Jacques <john.jacques@intel.com>

--- a/board/axxia/axc6700/Makefile
+++ b/board/axxia/axc6700/Makefile
@@ -33,7 +33,7 @@ else
 ################################################################################
 ## SPL Build
 
-obj-y   += mbist_range.o secure.o
+obj-y   += mbist_range.o secure.o ncp_l3lock_region_init.o
 
 ifdef CONFIG_AXXIA_EMU
 obj-y	+= sysmem_emulation.o
