board/axxia: Merge in the RTE ELM Code
Signed-off-by: John Jacques <john.jacques@intel.com>

--- a/board/axxia/common/Makefile
+++ b/board/axxia/common/Makefile
@@ -35,7 +35,7 @@ obj-y += sysmem_reset.o spl.o axxia_initialize.o pciesriosata.o sysmem_bist.o
 
 ifndef CONFIG_AXXIA_EMU
 obj-y += ncp_sm_denali_2041_init_56xx.o ncp_sysmem_init_synopphy.o
-obj-y += ncp_cm_ctrl_init_56xx.o ncp_treemem_init_synopphy.o
+obj-y += ncp_cm_ctrl_init_56xx.o ncp_treemem_init_synopphy.o ncp_elm.o
 obj-y += sysmem_asic.o voltage.o
 endif
 
