board/axxia: Add a Command for NCR Access
Signed-off-by: John Jacques <john.jacques@intel.com>

--- a/common/Makefile
+++ b/common/Makefile
@@ -216,6 +216,7 @@ obj-$(CONFIG_CMD_DFU) += cmd_dfu.o
 obj-$(CONFIG_CMD_GPT) += cmd_gpt.o
 obj-$(CONFIG_CMD_ETHSW) += cmd_ethsw.o
 obj-$(CONFIG_CMD_SBB) += cmd_sbb.o
+obj-$(CONFIG_CMD_NCR) += cmd_ncr.o
 
 # Power
 obj-$(CONFIG_CMD_PMIC) += cmd_pmic.o
