--- a/configs/axc6700_sim_defconfig
+++ b/configs/axc6700_sim_defconfig
@@ -2,5 +2,6 @@ CONFIG_ARM=y
 CONFIG_TARGET_AXXIA=y
 CONFIG_TARGET_AXC6700=y
 CONFIG_TARGET_SIMULATION=y
+CONFIG_NET_ONCE=y
 CONFIG_AXXIA_GPIO=y
 CONFIG_AXXIA_SPI=y
